# InterceptSuite

./: .gitignore  Build.md  CMakeLists.txt  CMakeSettings.json  CROSS_PLATFORM.md  DLL_INTEGRATION.md  Intercept.def  LICENSE  Library_INTEGRATION.md  README.md  SECURITY.md  SETUP.md  USAGE_GUIDE.md  Usage.md  build_linux.sh  build_macos.sh  build_windows.ps1  myCA.key  myCA.pem  script.py  script_backup.py  script_fixed.py  script_new.py  tls_proxy.def  vcpkg.json
.github/: FUNDING.yml
.github/workflows/: Build-DLL.yml  Build-DotNet.yml  Build-Lib.yml  codeql-analysis.yml  dotnet-gui.yml  release-installer.yml  release-linux.yml  release-macos.yml  release-windows.yml  release.yml  rust-tauri.yml
Dot NET GUI/TLS_MITM_WPF/: App.xaml  App.xaml.cs  CRASH_FIX_SUMMARY.md  DiagnosticsHelper.cs  DllManager.cs  HelpDialog.cs  MainWindow.xaml  MainWindow.xaml.bak  MainWindow.xaml.cs  MainWindow.xaml.cs.bak  MainWindowDisposable.cs.bak  MainWindowPatch.cs  NativeMethods.cs  NetworkInterfaceUpdate.cs  ProxyDiagnostics.cs  RefreshButtonHandler.cs  RefreshNetworkInterfaces.cs  TLS_MITM_WPF.csproj  TroubleshootingGuide.md  myCA.key  myCA.pem
GUI/InterceptSuite/: .gitignore  App.axaml  App.axaml.cs  App.xaml  App.xaml.cs  AssemblyInfo.cs  DiagnosticsHelper.cs  DllManager.cs  ILLink.Descriptors.xml  InterceptSuite.csproj  MainWindow.xaml  MainWindow.xaml.cs  MainWindowPatch.cs  NativeMethods.cs  Program.cs  ProxyDiagnostics.cs  ViewLocator.cs  app.manifest  index.html  package-lock.json  package.json
GUI/InterceptSuite/Converters/: EventColorConverter.cs  ExtensionConverters.cs  StatusMessageColorConverter.cs
GUI/InterceptSuite/Extensions/: PythonEnvironment.cs  PythonExtensionLoader.cs  PythonSettings.cs
GUI/InterceptSuite/Extensions/APIs/Core/: InterceptSuiteInterceptor.cs
GUI/InterceptSuite/Extensions/APIs/DataViewer/: DataViewerAPI.cs
GUI/InterceptSuite/Extensions/APIs/Logging/: ExtensionLogger.cs
GUI/InterceptSuite/Helpers/: DataHelper.cs  FileHelper.cs  UIHelper.cs
GUI/InterceptSuite/Installer/Linux/: build-packages.sh  create-appimage.sh  create-deb.sh  create-rpm.sh  get-version.sh  installer.sh  show-version.sh
GUI/InterceptSuite/Installer/MacOS/: build-installer.sh  create-pkg-installer.sh  entitlements.plist
GUI/InterceptSuite/Installer/Windows/: Get-Version.ps1  Show-Version.ps1  build-application.ps1  build-installers.ps1
GUI/InterceptSuite/Installer/Windows/nsis/: InterceptSuite-Standard.nsi
GUI/InterceptSuite/Json/: ExtensionJsonContext.cs
GUI/InterceptSuite/Models/: ConnectionEntry.cs  ConnectionEvent.cs  ExtensionConfiguration.cs  ExtensionDataContext.cs  InterceptEntry.cs  LogEntry.cs  LogEvent.cs  ProxyEntry.cs
GUI/InterceptSuite/NativeInterop/: NativeLibrary.cs  ResourceManager.cs
GUI/InterceptSuite/Services/: ExtensionConfigManager.cs
GUI/InterceptSuite/ViewModels/: BaseViewModel.cs  DataViewerTabViewModel.cs  ExtensionDataViewerTab.cs  ExtensionsViewModel.cs  LogViewModel.cs  MainWindowViewModel.cs  ProjectStartupViewModel.cs  PythonSettingsViewModel.cs  ViewModelBase.cs
GUI/InterceptSuite/Views/: AboutDialog.axaml  AboutDialog.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  ProjectStartupWindow.axaml  ProjectStartupWindow.axaml.cs  PythonSettingsView.axaml  PythonSettingsView.axaml.cs
GUI/InterceptSuite/Views/Components/: DataViewerTab.axaml  DataViewerTab.axaml.cs  ExtensionsView.axaml  ExtensionsView.axaml.cs
GUI/InterceptSuite/src/: App.tsx
GUI/InterceptSuite/src-tauri/: Cargo.toml  Intercept_Suite_Cert.pem  Intercept_Suite_key.key  build.rs  prepare-resources.js  prepare-resources.ps1  prepare-resources.sh  tauri.conf.json
GUI/InterceptSuite/src-tauri/icons/: icon.icns
GUI/InterceptSuite/src-tauri/src/: lib.rs  lib_corrupted.rs  main.rs
GUI/InterceptSuite/src/components/: MainContainer.tsx  TabContainer.tsx
GUI/InterceptSuite/src/components/common/: ContextMenu.tsx  DataTable.tsx  DataViewerTabs.tsx  Tabs.tsx  Toast.tsx  index.ts
GUI/InterceptSuite/src/components/logs/: LogsTab.tsx  index.ts
GUI/InterceptSuite/src/components/proxy/: ConnectionsTab.tsx  InterceptTab.tsx  ProxyHistoryTab.tsx  SettingsTab.tsx  index.ts
GUI/InterceptSuite/src/styles/: DataViewerTabs.css  InterceptTab.css  LogsTab.css  ProxyHistoryTab.css  interceptData.css  main.css
GUI/InterceptSuite/src/types/: index.d.ts  index.ts
GUI/RUST_GUI/: BUILD.md  Cargo.toml
GUI/RUST_GUI/src/: app.rs  library.rs  main.rs
GUI/RUST_GUI/src/ui/: messages.rs  mod.rs  state.rs  styles.rs  views.rs
GUI/RUST_GUI/src/ui/tabs/: connections.rs  intercept.rs  mod.rs  proxy_history.rs  settings.rs
build-dll/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  tls_project.sln  tls_proxy.vcxproj  tls_proxy.vcxproj.filters
build-dll/tls_proxy.dir/MinSizeRel/: objects.txt
build-dll/tls_proxy.dir/RelWithDebInfo/: objects.txt
include/: cert_utils.h  platform.h  process_divert.h  proxy_ui.h  socks5.h  tls_proxy.h  tls_proxy_dll.h  tls_utils.h  user_data.h  utils.h
publish/: InterceptSuite.deps.json
src/: applink.c  cert_utils.c  dll_applink.c  main.c  main.c.new  process_divert.c  proxy_ui.c  socks5.c  test_output.c  test_winmain.c  tls_utils.c  user_data.c  utils.c
src/config/: user_data.c  user_data.h
src/platform/: platform.h
src/protocol/: protocol_detector.c  protocol_detector.h
src/proxy/: proxy_manager.c  proxy_manager.h  socks5.c  socks5.h  udp_relay.c  udp_relay.h  upstream_proxy.c  upstream_proxy.h
src/proxy/interceptor/: interceptor.c  interceptor.h
src/tls/cert/: cert_export.c  cert_export.h  cert_utils.c  cert_utils.h
src/tls/proxy/: tls_proxy.h  tls_proxy_dll.h  tls_utils.c  tls_utils.h
src/utils/: packet_id.c  packet_id.h  utils.c  utils.h
test/: test_cross_platform.c  test_mac.c  test_main.c
