[package]
name = "intercept_gui"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "intercept_gui"
path = "src/main.rs"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[dependencies]
iced = { version = "0.12", features = ["canvas", "tokio", "svg"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libloading = "0.8"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
